--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       body{
         background-color:#f4f4f4;
         font-family: 'Arvo', serif;
-        font-size:80pt;
+        font-size:20px;
         color:#bbb;
         overflow:hidden;
       }
@@ -23,15 +23,116 @@
         color:#333 !important;
       }
     </style>
-    <div id='content'>
-      <p><span id='previous' style='text-align:left'>A</span> <span id='focus'>Start</span> <span id='next'>D</span></p>
+    <div id='manual' style='font-size:20px;text-align:center;margin-bottom:20px'>
+      <p style='margin:0px;'>onwore</p>
+<ul style='list-style:none;display:inline-block;margin:0px;padding:0px;'>
+  <li style='display: list-item;float:left;
+color: #aaa;
+font: bold 9pt arial;
+text-decoration: none;
+text-align: center;
+width: 44px;
+height: 41px;
+margin: 5px;
+background: #eff0f2;
+-moz-border-radius: 4px;
+border-radius: 4px;
+border-top: 1px solid #f5f5f5;
+-webkit-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+-moz-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+text-shadow: 0px 1px 0px #f5f5f5;'><span style='display: block;
+margin: 13px 0 0;
+text-transform: uppercase;color:#ddd'>W</span></li>
+</ul>
+<br/>
+<ul style='list-style:none;display:inline-block;margin:0px;padding:0px;'>
+        <li style='display: list-item;float:left;
+color: #aaa;
+font: bold 9pt arial;
+text-decoration: none;
+text-align: center;
+width: 44px;
+height: 41px;
+margin: 5px;
+background: #eff0f2;
+-moz-border-radius: 4px;
+border-radius: 4px;
+border-top: 1px solid #f5f5f5;
+-webkit-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+-moz-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+text-shadow: 0px 1px 0px #f5f5f5;'><span style='display: block;
+margin: 13px 0 0;
+text-transform: uppercase;'>A</span></li>
+<li style='display: list-item;float:left;
+color: #aaa;
+font: bold 9pt arial;
+text-decoration: none;
+text-align: center;
+width: 44px;
+height: 41px;
+margin: 5px;
+background: #eff0f2;
+-moz-border-radius: 4px;
+border-radius: 4px;
+border-top: 1px solid #f5f5f5;
+-webkit-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+-moz-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+text-shadow: 0px 1px 0px #f5f5f5;'><span style='display: block;
+margin: 13px 0 0;
+text-transform: uppercase;color:#ddd'>S</span></li>
+        <li style='display: list-item;float:left;
+color: #aaa;
+font: bold 9pt arial;
+text-decoration: none;
+text-align: center;
+width: 44px;
+height: 41px;
+margin: 5px;
+background: #eff0f2;
+-moz-border-radius: 4px;
+border-radius: 4px;
+border-top: 1px solid #f5f5f5;
+-webkit-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+-moz-box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+box-shadow: inset 0 0 25px #e8e8e8, 0 1px 0 #c3c3c3, 0 2px 0 #c9c9c9, 0 2px 3px #333;
+text-shadow: 0px 1px 0px #f5f5f5;'><span style='display: block;
+margin: 13px 0 0;
+text-transform: uppercase;'>D</span></li>
+      </ul>
+    </div>
+    <div>
+        <table style='width:100%;font-size:80px;'>
+          <tr>
+            <td style='text-align:right;width:50%;color:#ddd' id='previous'>
+
+            </td>
+            <td style='text-align:right;width:0%;' id='previous'>&nbsp;</td>
+            <td style='text-align:center;width:0%;color:#333;' id='focus'>
+
+            </td>
+            <td style='text-align:right;width:0%;' id='previous'>&nbsp;</td>
+            <td style='text-align:left;width:50%;color:#ddd' id='next'>
+
+            </td>
+          </tr>
+        </table>
     </div>
 
+    <div style='text-align:center;margin-top:20px;'>
+      <span id='words_per_minute'>0</span> words/min
+    </div>
+    <div style='text-align:center;'>
+      <span id='precent_readed'>0</span> %
+    </div>
     <script>
 
       $_count_word=-1;
       $_count_paragraph=0;
       $_paragraph = new Array();
+      $_words_total=0;
       $.ajax({
           async: false,
           type: "POST",
@@ -47,7 +148,6 @@
               $_count=0;
               $_focus="focus";
               $_i=0;
-              $_word_total=0;
               jQuery.each(response.data.paragraph,function(key,value){
                 $_paragraph[$_i]=new Array();
                 split = value.content.split(" ");
@@ -55,19 +155,39 @@
                 jQuery.each(split,function(key,value){
                   $_paragraph[$_i][$_j]=value;
                   $_j++;
-                  $_word_total++;
+                  $_words_total++;
                 });
                 $_i++;
 
               });
-              alert($_word_total);
 
             }
           }
         });
         $_letter_spaces=20;
+        $_timestamp_start=0;
+        $_words_readed=0;
         $(document).ready(function(){
           $(document).keypress(function(key){
+            if($_timestamp_start==0){
+              $_timestamp_start=new Date().getTime();
+              $_timestamp_start=parseInt($_timestamp_start/1000);
+            }else{
+              $_timestamp=new Date().getTime();
+              $_timestamp=parseInt($_timestamp/1000);
+              $_words_readed++;
+              $_words_per_minute=parseInt($_words_readed/(($_timestamp-$_timestamp_start)/60));
+              if(isNaN($_words_per_minute)){
+                $_words_per_minute=0;
+              }
+              $("#words_per_minute").html($_words_per_minute);
+              $_precent_readed=parseInt(($_words_readed/$_words_total)*100);
+              if(isNaN($_precent_readed)){
+                $_precent_readed=0;
+              }
+              $("#precent_readed").html($_precent_readed);
+
+            }
             //alert(key.which);
             if(key.which==100){
               $_count_word++;
@@ -80,15 +200,14 @@
             }
             $("#focus").html($_paragraph[$_count_paragraph][$_count_word]);
             if($_count_word+1>=$_paragraph[$_count_paragraph].length){
-              $_next="            ";
+              $_next="";
             }else{
-              $_next=$_paragraph[$_count_paragraph][$_count_word+1]+" "+$_paragraph[$_count_paragraph][$_count_word+2]+" "+$_paragraph[$_count_paragraph][$_count_word+3];
+              $_next=$_paragraph[$_count_paragraph][$_count_word+1];
             }
             if($_count_word==0){
-              $_previous="               ";
+              $_previous="";
             }else{
-                $_previous=$_paragraph[$_count_paragraph][$_count_word-3]+" "+$_paragraph[$_count_paragraph][$_count_word-2]+" "+$_paragraph[$_count_paragraph][$_count_word-1];
-
+              $_previous=$_paragraph[$_count_paragraph][$_count_word-1];
             }
             $_spaces_left=$_letter_spaces-$_paragraph[$_count_paragraph][$_count_word].length;
             $_spaces_left=$_spaces_left/2;
